--- a/app/src/debug/res/drawable/ic_launcher_background.xml
+++ b/app/src/debug/res/drawable/ic_launcher_background.xml
@@ -1,23 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="432"
-    android:viewportHeight="432">
-  <group>
-    <clip-path
-        android:pathData="M0,0h432v432h-432z"/>
-    <path
-        android:pathData="M0,0h432v432h-432z"
-        android:fillColor="#FAFAFA"/>
-    <path
-        android:pathData="M0,0h432v432h-432z"
-        android:fillColor="#2E3943"/>
-    <path
-        android:pathData="M322.13,215.5C322.13,272.66 274.64,319 216.07,319C157.49,319 110,272.66 110,215.5C110,158.34 157.49,112 216.07,112C274.64,112 322.13,158.34 322.13,215.5Z"
-        android:fillColor="#F2FAFF"/>
-    <path
-        android:pathData="M216.07,299.59C263.66,299.59 302.24,261.94 302.24,215.5C302.24,169.06 263.66,131.41 216.07,131.41C168.47,131.41 129.89,169.06 129.89,215.5C129.89,261.94 168.47,299.59 216.07,299.59ZM216.07,319C274.64,319 322.13,272.66 322.13,215.5C322.13,158.34 274.64,112 216.07,112C157.49,112 110,158.34 110,215.5C110,272.66 157.49,319 216.07,319Z"
-        android:fillColor="#7EBBED"
-        android:fillType="evenOdd"/>
-  </group>
+    android:viewportWidth="1080"
+    android:viewportHeight="1080">
+    <group>
+        <path
+            android:pathData="M1080,0V1080H0V0Z"
+            android:fillColor="#146907"
+            android:fillType="evenOdd"/>
+        <path
+            android:pathData="M540,880C346.39,880 200,733.61 200,540C200,346.39 346.39,200 540,200C733.61,200 880,346.39 880,540C880,733.61 733.61,880 540,880Z"
+            android:fillColor="#c2eec2"
+            android:strokeColor="#000000"
+            android:strokeWidth="30"
+            android:strokeLineCap="round"
+            android:strokeLineJoin="round"
+            android:fillType="evenOdd"/>
+    </group>
 </vector>
